<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_arrow"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/news_header"
            app:layout_constraintBottom_toBottomOf="@id/news_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:id="@+id/news_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_s"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="350dp"
            android:text="@string/contents_s"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/news_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            />

        <TextView
            android:id="@+id/look_on_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look_on_website"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/contents"
            app:layout_constraintStart_toStartOf="@id/contents"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:maxWidth="250dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/look_on_website"
            app:layout_constraintStart_toEndOf="@id/look_on_website"
            android:layout_marginStart="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>