<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="10dp"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginVertical="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_s"
            android:maxWidth="250dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_s"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="@id/header"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/feed_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_label_s"
            android:maxWidth="220dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/author"
            app:layout_constraintStart_toStartOf="@id/header"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/steam_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>